--- a/nvme-proxmox-ve-9x.adoc
+++ b/nvme-proxmox-ve-9x.adoc
@@ -303,6 +303,7 @@ nvme discover -t tcp -w host-traddr -a traddr
 ====
 [subs=+quotes]
 ----
+nvme discover -t tcp -w 192.168.165.72 -a 192.168.165.51
 Discovery Log Number of Records 4, Generation counter 47
 =====Discovery Log Entry 0======
 trtype:  tcp
