--- a/nvme-ol-7x.adoc
+++ b/nvme-ol-7x.adoc
@@ -31,7 +31,7 @@ include::_include/hu/reuse_hu_cloud_note.adoc[]
 
 * SAN booting using the NVMe-oF protocol is currently not supported.
 
-== Step 1: Validate software versions
+== Step 1: Install Oracle Linux and NVMe software and verify your configuration
 
 . Install Oracle Linux 7x on the server.
 
