--- a/nvme-ol-supported-features.adoc
+++ b/nvme-ol-supported-features.adoc
@@ -24,19 +24,15 @@ Features supported for host configuration with NVMe over Fabrics (NVMe-oF) varie
 a|9.4 or later
  |9.12.1 or later
 |NVMe/TCP provides namespaces using the native `nvme-cli` package
-a|8.2 or later (TBC)
- |9.10.1 or later  
-|NVMe/TCP is a fully supported enterprise feature
-a|9.0 or later  (TBC)
- |9.10.1 or later
+a|8.2 or later 
+ |9.10.1 or later 
 |NVMe and SCSI traffic is supported on the same host using NVMe multipath for NVMe-oF namespaces and dm-multipath for SCSI LUNs
-a|8.2 or later  (TBC)
+a|7.7 or later  
  |9.4 or later
 |===
 
 include::_include/nvme/nvme-cli-note.adoc[]
 
-ONTAP supports the following SAN host features regardless of the ONTAP version running on your system setup: (TBC)
 
 [cols="50,50",options="header"]
 |===
@@ -52,6 +48,22 @@ Provides round-robin load balancing for NVMe multipath.
 a|8.3
 |===
 
+ONTAP supports the following SAN host features regardless of the ONTAP version running on your system setup.
+
+[cols="75,25",options="header"]
+|===
+
+|Feature | Oracle Linux host version
+|In-kernel NVMe multipathing for NVMe namespaces is enabled by default
+a|8.3 or later
+|SAN booting is enabled using the NVMe/FC protocol
+a|9.4 or later (TBC)
+|The `nvme-cli` package includes auto-connect scripts removing the need for third-party scripts
+a|8.2 or later (TBC)
+|The native udev rule in `nvme-cli` package provides round-robin load balancing for NVMe multipath
+a|8.2 or later (TBC)
+|===
+
 NOTE: For details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 
 == What's next
@@ -59,11 +71,15 @@ NOTE: For details on supported configurations, see the link:https://mysupport.ne
 [cols="50,50",options="header"]
 |===
 
-|If your RHEL version is .. | Go to ..
-|9x
+|If your Oracle Linux version is .. | Learn about ..
+|9 series
 |link:nvme-ol-9x.html[Configuring NVMe for Oracle Linux 9x]
-|8x 
+|8 series 
 |link:nvme-ol-8x.html[Configuring NVMe for Oracle Linux 8x]
-|7x
+|7 series
 |link:nvme-ol-7x.html[Configuring NVMe for Oracle Linux 7x]
 |===
+
+.Related information
+
+link:https://docs.netapp.com/us-en/ontap/san-admin/start-nvme-fc-service-svm-task.html[Learn about managing NVMe protocols]
